Bug 535120 - NPN_GetValue(NPNVToolkit) doesn't work with null npp, r=bent

--HG--
extra : rebase_source : 67d03285f34260c02c49579ef8ff664e04bc4a84